fix bug z-index

--- a/css/sticker.css
+++ b/css/sticker.css
@@ -29,18 +29,22 @@ body {
 	position: absolute;
 	left: 0;
 	top: 0;
-	width: 100%;
+	overflow: hidden;
+	width: 200px;
 	height: 30px;
 	line-height: 30px;
 	font-size: 20px;
-	text-indent: 0.6em;
+	margin-left: 10px; 
 	cursor: default;
 	user-select: none;
+	outline: none;
 }
 
 .sticker-shut {
 	text-indent: 0em;
-	float: right;
+	position: absolute;
+	top: 0;
+	right: 0;
 	line-height: 30px;
 	text-align: center;
 	height: 30px;
@@ -65,6 +69,7 @@ body {
 	color: black;
 	font-size: 13px;
 	border-top: 1px solid rgba(200, 200, 200, 0.3);
+	outline: none;
 }
 
 .sticker-message {
@@ -74,4 +79,8 @@ body {
 	outline:none;
 	max-height: 320px;
 	user-select: none;
+}
+
+.add-sticker {
+
 }
